# qad-env-mcp

./: .gitignore  README.md  demo.md  pyproject.toml
.claude/: settings.local.json
docs/: yab-backup-restore.md
qad-env-mcp/: README.md
qad-env-mcp/src/qad_env_mcp/: paths.py  server.py  ssh_manager.py
src/qad_env_mcp/: paths.py  registry.py  server.py  ssh_manager.py
